# kwin-fancyzones

./: .gitignore  LICENSE  README.md
.github/workflows/: testing-image.yml
config/: zones.example.json
docker/: Dockerfile  Dockerfile.effect  entrypoint.sh
effect/: CMakeLists.txt  fancyzoneseffect.cpp  fancyzoneseffect.h  metadata.json
effect/contents/ui/: overlay.qml
scripts/: build-effect-image.sh  build-image.sh  install.sh  run-visual.sh  test-effect.sh  test.sh
scripts/harness/: lib.sh  run-smoke-test.sh  run-snap-test.sh  start-session.sh
scripts/harness-wayland/: fakeinput.c  run-effect-test.sh  session.sh  visual-apps.sh  visual-session.sh
scripts/harness-wayland/setup/: metadata.json
scripts/harness-wayland/setup/contents/ui/: main.qml
src/: metadata.json
src/contents/code/: main.js
src/contents/ui/: main.qml
